--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/dbal": "^4.3",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "midtrans/midtrans-php": "^2.6",
         "spatie/browsershot": "^5.0"
     },
     "require-dev": {
