--- a/package.json
+++ b/package.json
@@ -113,6 +113,8 @@
         "mkdirp": "^3.0.1",
         "mz": "^2.7.0",
         "nanoid": "^3.3.11",
+        "nfc-pcsc": "^0.8.1",
+        "node-fetch": "^3.3.2",
         "node-releases": "^2.0.19",
         "normalize-path": "^3.0.0",
         "normalize-range": "^0.1.2",
